<resources>
    <string name="app_name">biblioteca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblTitulo">Titulo</string>
    <string name="lblAutor">Autor</string>
    <string name="lblIsbn">ISBN</string>
    <string name="lblGenero">Genero</string>
    <string name="lblDisponibles">Disponibles</string>
    <string name="lblOcupados">Ocupados</string>
</resources>