<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guardarLibroFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitulo" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/lblAutor" />

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblIsbn" />

        <EditText
            android:id="@+id/txtIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGenero" />

        <EditText
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblnumeroEjemplaresDisponibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDisponibles" />

        <EditText
            android:id="@+id/txtnumeroEjemplaresDisponibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblnumeroEjemplaresOcupados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblOcupados" />

        <EditText
            android:id="@+id/txtnumeroEjemplaresOcupados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar" />
    </LinearLayout>
</FrameLayout>